[package]
name = "fc-consensus"
version = "2.0.0-dev"
authors = [""]
description = "Frontier consensus for substrate"
edition = "2021"
license = ""
repository = "https://github.com/bifrost-platform/frontier/"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"

sp-api = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-block-builder = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-blockchain = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-consensus = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-runtime = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-client-api = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-consensus = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }

fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fc-db = { version = "2.0.0-dev", path = "../db" }
