[package]
name = "fc-db"
version = "2.0.0-dev"
authors = [""]
description = "Frontier database backend"
edition = "2021"
license = ""
repository = "https://github.com/bifrost-platform/frontier/"

[dependencies]
kvdb-rocksdb = "0.14.0"
parking_lot = "0.11.2"

codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { git = "https://github.com/bifrost-platform/substrate", branch = "thebifrost-legacy-v1.1.4" }
sp-database = { git = "https://github.com/bifrost-platform/substrate", branch = "thebifrost-legacy-v1.1.4" }
sp-runtime = { git = "https://github.com/bifrost-platform/substrate", branch = "thebifrost-legacy-v1.1.4" }

fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }
