[package]
name = "fc-evm-tracing"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = { version = "0.12", default-features = false }
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Frontier
fp-rpc-evm-tracing-events = { path = "../../primitives/rpc-evm-tracing-events", default-features = false }
fp-rpc-debug = { path = "../../primitives/rpc-debug", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.2", default-features = false }
