[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
authors = [""]
edition = "2021"
description = "Mapping sync logic for Frontier."
license = ""

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.1"
log = "0.4.8"

sp-api = { git = "https://github.com/bifrost-platform/substrate", branch = "bugfix" }
sp-blockchain = { git = "https://github.com/bifrost-platform/substrate", branch = "bugfix" }
sp-runtime = { git = "https://github.com/bifrost-platform/substrate", branch = "bugfix" }
sc-client-api = { git = "https://github.com/bifrost-platform/substrate", branch = "bugfix" }

fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fc-db = { version = "2.0.0-dev", path = "../db" }
