[package]
name = "fc-rpc-core"
version = "1.1.0-dev"
authors = [""]
edition = "2021"
description = "RPC traits of Ethereum."
license = ""

[dependencies]
ethereum = { version = "0.11.1", features = ["with-codec", "with-serde"] }
ethereum-types = "0.12"
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-pubsub = "18.0"
rlp = "0.5"
rustc-hex = "2.1.0"
fc-evm-tracing = { path = "../evm-tracing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
