[package]
name = "pallet-dynamic-fee"
version = "4.0.0-dev"
authors = [""]
edition = "2021"
description = "Dynamic fee handling for EVM."
license = ""

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.147", optional = true }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }
sp-std = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }
sp-inherents = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }
sp-runtime = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }
frame-system = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }
frame-support = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }

pallet-evm = { path = "../evm", version = "6.0.0-dev", default-features = false }

[dev-dependencies]
sp-io = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }
pallet-timestamp = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }

[features]
default = ["std"]
std = [
	"serde",

	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-system/std",
	"frame-support/std",

	"pallet-evm/std",
]
