[package]
name = "fp-consensus"
version = "2.0.0-dev"
authors = [""]
description = "Primitives for Frontier consensus"
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"

[dependencies]
ethereum = { version = "0.11.1", default-features = false, features = ["with-codec"] }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }
sp-runtime = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }
sp-std = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.0.2", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",

	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
