[package]
name = "fp-evm"
version = "3.0.0-dev"
license = ""
authors = [""]
edition = "2021"
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "Primitive EVM abstractions for Substrate."
documentation = "https://docs.rs/sp-evm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = { version = "0.33.1", default-features = false, features = ["with-codec"] }
serde = { version = "1.0.101", features = ["derive"], optional = true }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-core = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.2", default-features = false }
sp-std = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.2", default-features = false }

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"serde",

	"codec/std",
	"sp-core/std",
	"sp-std/std",
]
