[package]
name = "fp-rpc-evm-tracing-events"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environmental = { version = "1.1.2", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime-interface = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.1.3-beta", default-features = false }

# Ethereum
ethereum = { version = "0.11.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.12", default-features = false }
evm = { version = "0.33.1", default-features = false, features = ["with-codec"] }
evm-gasometer = { version = "0.33.0", default-features = false }
evm-runtime = { version = "0.33.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"environmental/std",
	"ethereum-types/std",
	"ethereum/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm/std",
	"sp-runtime-interface/std",
]

evm-tracing = ["evm-gasometer/tracing", "evm-runtime/tracing", "evm/tracing"]