[package]
name = "evm-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fp-rpc-evm-tracing-events = { path = "../../primitives/rpc-evm-tracing-events", default-features = false, features = ["evm-tracing"] }
fp-ext = { path = "../../primitives/ext", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-io = { default-features = false, git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-substrate-v1.0.0" }
sp-core = { default-features = false, git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-substrate-v1.0.0" }
sp-runtime = { default-features = false, git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-substrate-v1.0.0" }
sp-std = { default-features = false, git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-substrate-v1.0.0" }

ethereum-types = { version = "0.12", default-features = false }
evm = { version = "0.33.1", default-features = false, features = ["with-codec"] }
evm-gasometer = { version = "0.33.0", default-features = false }
evm-runtime = { version = "0.33.0", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm", default-features = false }
pallet-evm = { default-features = false, path = "../../frame/evm" }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethereum-types/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"fp-rpc-evm-tracing-events/std",
	"evm/std",
	"evm/with-serde",
	"fp-evm/std",
	"fp-ext/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std"
]
