[package]
name = "pallet-evm-test-vector-support"
version = "1.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "Test vector support for EVM pallet."

[dependencies]
evm = { version = "0.33.1", default-features = false, features = ["with-codec"] }
hex = { version = "0.4.0", optional = true }
serde = { version = "1.0.101", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

fp-evm = { version = "3.0.0-dev", path = "../../../primitives/evm", default-features = false }

[features]
default = ["std"]
std = [
	"evm/std",
	"hex",
	"serde",
	"serde_json",

	"fp-evm/std",
]
