[package]
name = "pallet-evm-precompile-blake2"
version = "2.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "BLAKE2 precompiles for EVM pallet."

[dependencies]
fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
	"fp-evm/std",
]
