[package]
name = "pallet-evm-precompile-bn128"
version = "2.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "BN128 precompiles for EVM pallet."

[dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }

sp-core = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-v1.0.0", default-features = false }

fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"fp-evm/std",
]
