[package]
name = "pallet-evm-precompile-curve25519"
version = "1.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "Curve25519 elliptic curve precompiles for EVM pallet."

[dependencies]
curve25519-dalek = { version = "4.0.0-pre.1", default-features = false, features = ["u64_backend", "alloc"] }

fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[features]
default = ["std"]
std = [
	"fp-evm/std",
]
