[package]
name = "pallet-evm-precompile-dispatch"
version = "2.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
frame-support = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3", default-features = false }

fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }
pallet-evm = { version = "6.0.0-dev", path = "../..", default-features = false }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"fp-evm/std",
	"pallet-evm/std",
]
