[package]
name = "pallet-evm-precompile-ed25519"
version = "2.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "ED25519 precompiles for EVM pallet."

[dependencies]
ed25519-dalek = { version = "1.0.0", default-features = false, features = ["alloc", "u64_backend"] }

fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[features]
default = ["std"]
std = [
	"fp-evm/std",
]
