[package]
name = "pallet-evm-precompile-modexp"
version = "2.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "MODEXP precompiles for EVM pallet."

[dependencies]
num = { version = "0.4", features = ["alloc"], default-features = false }

fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[dev-dependencies]
hex = "0.4.0"
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
	"num/std",
	"fp-evm/std",
]
