[package]
name = "pallet-evm-precompile-sha3fips"
version = "2.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "SHA3 FIPS202 precompile for EVM pallet."

[dependencies]
tiny-keccak = { version = "2.0", features = ["fips202"] }

fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[features]
default = ["std"]
std = [
	"fp-evm/std",
]
