[package]
name = "pallet-evm-precompile-simple"
version = "2.0.0-dev"
authors = [""]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/bifrost-platform/frontier/"
description = "Simple precompiles for EVM pallet."

[dependencies]
ripemd = { version = "0.1", default-features = false }

sp-io = { git = "ssh://git@github.com/bifrost-platform/substrate.git", branch = "bifrost-node-v1.1.0", default-features = false }

fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
	"ripemd/std",
	"sp-io/std",
	"fp-evm/std",
]
